charts/airflow-gw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
#  labels:
#    app: airflow-ingress
spec:
  rules:
    - host: {AIRFLOW_SERVICE_URI}
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: airflow-svc-webserver
              port:
                number: 8080
    - host: {FLOWER_SERVICE_URI}
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: airflow-svc-flower
              port:
                number: 5555
